Fix overflow of content and border on main_content

--- a/Frontend/public/css/styles.css
+++ b/Frontend/public/css/styles.css
@@ -132,8 +132,8 @@ a:link{
 }
 
 #main {
-    min-height: 90vh;
-    width: 100%;
+    min-height: 89vh;
+    width: 99%;
     height: 100%;
 
     display: grid;
@@ -303,4 +303,6 @@ a:link{
 #body_content {
     width: 100%;
     height: 100%;
+
+    border: 0px;
 }
